scripts/customer-mesh/virtual-service-recommendation-retries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-retries
spec:
  hosts:
    - recommendation
  http:
    retries:
      attempts: 10
      perTryTimeout: 2s
