scripts/customer-mesh/virtual-service-recommendation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
    - recommendation
  http:
    - route:
        - destination:
            host: recommendation
            subset: v1
          weight: 80
        - destination:
            host: recommendation
            subset: v2
          weight: 20
        - destination:
            host: recommendation
            subset: v3
          weight: 0
      retries:
        attempts: 10
        perTryTimeout: 2s
