scripts/customer-mesh/acl-allow-customer.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-preference
spec:
  selector:
    matchLabels:
      app: recommendation
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/customer/sa/preference"]
    - to:
        - operation:
            methods: ["GET"]
